--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@chspower1/mcp-for-redmine",
-  "version": "1.1.0",
+  "name": "@drjoy/mcp-for-redmine",
+  "version": "1.0.0",
   "description": "MCP Server for interacting with a Redmine instance.",
   "main": "dist/index.js",
   "type": "module",
@@ -12,14 +12,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/chspower1/mcp-for-redmine"
+    "url": "https://github.com/tungledjv/mcp-for-redmine.git"
   },
   "keywords": [
     "mcp",
     "redmine",
     "typescript"
   ],
-  "author": "chs",
+  "author": "DrJoy",
   "license": "MIT",
   "files": [
     "dist"
@@ -27,7 +27,7 @@
   "bin": {
     "mcp-for-redmine": "dist/cli.js"
   },
-  "homepage": "https://github.com/chspower1/mcp-for-redmine#readme",
+  "homepage": "https://github.com/tungledjv/mcp-for-redmine/blob/main/README.md",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.7.0",
     "axios": "^1.10.0",
