--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@drjoy/mcp-for-redmine",
-  "version": "1.0.0",
+  "name": "@drjoy_vn/mcp-for-redmine",
+  "version": "1.0.4",
   "description": "MCP Server for interacting with a Redmine instance.",
   "main": "dist/index.js",
   "type": "module",
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/tungledjv/mcp-for-redmine.git"
+    "url": "git+https://github.com/tungledjv/mcp-for-redmine.git"
   },
   "keywords": [
     "mcp",
